--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@prisma/client": "^4.2.1",
+    "@supabase/supabase-js": "^1.35.6",
     "@tanstack/react-query": "^4.2.3",
     "@types/next": "^9.0.0",
     "@types/node": "^18.7.13",
