--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "12.2.5",
     "prisma": "^4.2.1",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "yup": "^0.32.11"
