--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
     "axios": "^0.27.2",
+    "cookies-next": "^2.1.1",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
     "next": "12.2.5",
