--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@chakra-ui/react": "^2.2.9",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
-    "@prisma/client": "^4.2.1",
+    "@prisma/client": "^4.3.0",
     "@supabase/supabase-js": "^1.35.6",
     "@tanstack/react-query": "^4.2.3",
     "@types/next": "^9.0.0",
@@ -24,7 +24,6 @@
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
     "next": "12.2.5",
-    "prisma": "^4.2.1",
     "react": "18.2.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
@@ -33,6 +32,7 @@
   },
   "devDependencies": {
     "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5"
+    "eslint-config-next": "12.2.5",
+    "prisma": "^4.3.0"
   }
 }
