--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-ip-details": "^1.2.6",
+    "victory": "^36.6.7",
     "yup": "^0.32.11"
   },
   "devDependencies": {
