--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
-    "prisma": "^4.3.1"
+    "postcss": "^8.4.21",
+    "prisma": "^4.3.1",
+    "tailwindcss": "^3.2.7"
   }
 }
